function(add_example name)
    set(target ${counter}-${name})
    math(EXPR counter "${counter}+1")
    set(counter ${counter} PARENT_SCOPE)
    add_executable(${target} ${name}.cpp)
    target_link_libraries(${target} PRIVATE promise-cpp boost::beast boost::asio)
    set_target_properties(${target} PROPERTIES FOLDER Examples)
    target_include_directories(${target} PRIVATE .)
endfunction()

set(counter 1)
add_example(asio_timer)
add_example(asio_http_client)
add_example(asio_http_server)
